--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,7 @@ trigger:
 - master
 
 resources:
-- repo: self
+- repo: https://dannt0471@dev.azure.com/dannt0471/helloworld/_git/helloworld
 
 variables:
   tag: '$(Build.BuildId)'
